kubernetes/authentication/traefik-forward-auth/deployment.yaml
#
# Traefik Forward Auth Deployment
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-forward-auth
  labels:
    app: traefik-forward-auth
spec:
  replicas: 3
  selector:
    matchLabels:
      app: traefik-forward-auth
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: traefik-forward-auth
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - image: thomseddon/traefik-forward-auth:latest
        name: traefik-forward-auth
        ports:
        - containerPort: 4181
          protocol: TCP
      volumes:
      - name: traefik-forward-auth-secrets
        secret:
          secretName: traefik-forward-auth-secrets
