kubernetes/authentication/traefik-forward-auth/ingress.yaml
# Allowing traefik to route to argocd pods
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-forward-auth
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`auth.kubernetes.timo.be`)
      services:
        - name: traefik-forward-auth
          port: 4181
